# pruebat

./: .dockerignore  LICENSE  docker-compose.yml  pyproject.toml  wsgi.py
docker/: Dockerfile
