[project]
requires-python = ">=3.8"
name = "libretranslate"
description = "Free and Open Source Machine Translation API. Self-hosted, no limits, no ties to proprietary services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
maintainers = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
keywords = [
    "Python",
    "Translate",
    "Translation",
    "API",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]

[build]
builder = "NIXPACKS"

[deploy]
numReplicas = 1
sleepApplication = false
restartPolicyType = "ON_FAILURE"
restartPolicyMaxRetries = 10

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov=libretranslate",
    "--color=yes",
    "--cov-report=term-missing",
]

[tool.ruff]
src = ["libretranslate", "scripts"]
target-version = "py38"
line-length = 136
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "ICN",   # flake8-import-conventions
    "TID",   # flake8-tidy-imports
    "F",     # pyflakes
    "UP",    # pyupgrade
]

ignore = [
    "E501", # line too long
    "A003", # Class attribute is shadowing a python builtin
    "S101", # Use of `assert` detected
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201", "T203", # remove print and pprint
    "E402", # Module level import not at top of file
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused

[tool.ruff.mccabe]
max-complexity = 12
