[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "libretranslate"
description = "Free and Open Source Machine Translation API. Self-hosted, no limits, no ties to proprietary services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
maintainers = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
keywords = [
    "Python",
    "Translate",
    "Translation",
    "API",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]

dependencies = [
    "argostranslate ==1.9.1",
    "Flask ==2.2.2",
    "flask-swagger ==0.2.14",
    "flask-swagger-ui ==4.11.1",
    "Flask-Limiter ==2.6.3",
    "Flask-Babel ==3.1.0",
    "Flask-Session ==0.4.0",
    "waitress ==2.1.2",
    "expiringdict ==1.2.2",
    "langdetect==1.0.9",
    "lexilang==1.0.1",
    "morfessor ==2.0.6",
    "appdirs ==1.4.4",
    "APScheduler ==3.9.1",
    "translatehtml ==1.5.2",
    "argos-translate-files ==1.1.4",
    "itsdangerous ==2.1.2",
    "Werkzeug ==2.2.2",
    "requests ==2.28.1",
    "redis ==4.3.4",
    "prometheus-client ==0.15.0",
    "polib ==1.1.1",
    "packaging ==23.1"
]

[project.scripts]
libretranslate = "libretranslate.main:main"
ltmanage = "libretranslate.manage:manage"

[project.optional-dependencies]
test = [
    "pytest >=7.2.0",
    "pytest-cov",
    "pre-commit >=3.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://libretranslate.com"
Source = "https://github.com/LibreTranslate/LibreTranslate"
Documentation = "https://github.com/LibreTranslate/LibreTranslate"
Tracker = "https://github.com/LibreTranslate/LibreTranslate/issues"
History = "https://github.com/LibreTranslate/LibreTranslate/releases"

[build]
builder = "NIXPACKS"

[deploy]
numReplicas = 1
sleepApplication = false
restartPolicyType = "ON_FAILURE"
restartPolicyMaxRetries = 10
